--- a/day03/index.html
+++ b/day03/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HomeWork03</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 
 </head>
@@ -22,28 +22,28 @@
 <main>
  
       <div class="box left">
-        <img src="/img/street.jpg" alt="bike-street" width="100%">
+        <img src="img/street.jpg" alt="bike-street" width="100%">
         <p>STREET</p>
         <h2>Most popular street motorbike!</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo iusto incidunt ipsa veritatis recusandae minima excepturi repellat corporis quos maiores!</p>
       </div>
   
       <div class="box right">
-        <img src="/img/street2.jpg" alt="bike-street" width="100%" height="220">
+        <img src="img/street2.jpg" alt="bike-street" width="100%" height="220">
         <p>STREET</p>
         <h2>Most popular street motorbike!</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium, eveniet?</p>
 
       </div>
       <div class="box left">
-          <img src="/img/sport.jpeg" alt="bike-sport" width="100%">
+          <img src="img/sport.jpeg" alt="bike-sport" width="100%">
           <p>SPORT</p>
           <h2>Most popular sport motorbike!</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo iusto incidunt ipsa veritatis recusandae minima excepturi repellat corporis quos maiores!</p>
         </div>
     
         <div class="box right">
-          <img src="/img/sport2.jpg" alt="bike-sport" width="100%" height="220">
+          <img src="img/sport2.jpg" alt="bike-sport" width="100%" height="220">
           <p>SPORT</p>
           <h2>Most popular sport motorbike!</h2>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium, eveniet?</p>
@@ -51,14 +51,14 @@
         </div>
 
         <div class="box left">
-            <img src="/img/chop.jpg" alt="bike-sport" width="100%">
+            <img src="img/chop.jpg" alt="bike-sport" width="100%">
             <p>CHOPPER</p>
             <h2>Most popular  choper motorbike!</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo iusto incidunt ipsa veritatis recusandae minima excepturi repellat corporis quos maiores!</p>
           </div>
       
           <div class="box right">
-            <img src="/img/chop2.jpg" alt="bike-sport" width="100%" height="220">
+            <img src="img/chop2.jpg" alt="bike-sport" width="100%" height="220">
             <p>CHOPPER</p>
             <h2>Most popular choper motorbike!</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium, eveniet?</p>
