--- a/day06/index.html
+++ b/day06/index.html
@@ -99,7 +99,7 @@
 
       <div class="leftThree">
         <div class="cube2"></div>
-        <img src="/img/macbook.png" alt="macbook" class="mac" width="600">
+        <img src="./img/macbook.png" alt="macbook" class="mac" width="600">
       </div>
 
 
